# hp-victus-sentiment

./: .gitignore  LICENSE  Makefile  README.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt
.streamlit/: config.toml
data/: dataset.csv  external_validation.csv
src/: __init__.py  config.py  model.py  preprocessing.py  state.py  styles.py
src/components/: __init__.py  sidebar.py  tab_dataset.py  tab_evaluation.py  tab_history.py  tab_predict.py  tab_visualization.py
tests/: test_model.py  test_preprocessing.py
